[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/SCE-PS3 Rodin LATIN Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1093.0
margin_bottom = 678.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_priority = 5
margin_left = 321.024
margin_top = 236.839
margin_right = 777.024
margin_bottom = 316.839
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 456.0
margin_bottom = 32.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 152.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Email"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 456.0
margin_bottom = 32.0
rect_min_size = Vector2( 300, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 456.0
margin_bottom = 68.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 152.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 156.0
margin_right = 456.0
margin_bottom = 32.0
rect_min_size = Vector2( 300, 0 )
secret = true

[node name="Login" type="Button" parent="."]
margin_left = 445.878
margin_top = 343.143
margin_right = 642.878
margin_bottom = 406.143
text = "Login"

[node name="Back" type="Button" parent="."]
margin_left = 19.3421
margin_top = 517.124
margin_right = 216.342
margin_bottom = 580.124
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="notification" type="Label" parent="."]
margin_left = 188.0
margin_top = 424.0
margin_right = 908.0
margin_bottom = 495.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
